load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/jakevoytko/stringmap",
)

go_library(
    name = "go_default_library",
    srcs = [
        "inmemorystringmap.go",
        "redisstringmap.go",
        "stringmap.go",
    ],
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = ["@com_github_go_redis_redis//:go_default_library"],
)
