load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jakevoytko/go-stringmap

gazelle(
    name = "gazelle",
    prefix = "github.com/jakevoytko/go-stringmap",
)

go_library(
    name = "go_default_library",
    srcs = [
        "inmemorystringmap.go",
        "redisstringmap.go",
        "stringmap.go",
    ],
    importpath = "github.com/jakevoytko/go-stringmap",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_redis_redis_v8//:go_default_library"],
)
